--- a/style.css
+++ b/style.css
@@ -20,15 +20,37 @@ header {
     right: 0;
     z-index: 1000;
     width: 100%;
-    height: 10rem;
-    padding: 2rem;
     background-color: aqua;
+    transition: all ease 1s;
+}
+  
+header.hidden {
+    top: -10rem;
+}
+
+header div {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header nav {
     width: 100%;
-    margin-top: 2rem;
+    height: 10rem;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
+/* a.active
+header nav:active {
+    position: sticky;
+    top: 0;
+} */
 
 nav ul {
     display: flex;
@@ -47,6 +69,7 @@ li a {
     padding: 0.5rem 1rem;
 }
 
+a.active,
 li a:hover {
     background-color: black;
     color: aqua;
@@ -68,7 +91,7 @@ li a:hover {
 
 section {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
